--- a/styles/profile/profile.scss
+++ b/styles/profile/profile.scss
@@ -41,10 +41,10 @@
       display: flex;
       column-gap: 8px;
 
-      &-title {
-      }
-      &-text {
-      }
+    //   &-title {
+    //   }
+    //   &-text {
+    //   }
     }
     &-btn {
       &-wrapper {
