--- a/paya_behsa/leave/templates/accept.html
+++ b/paya_behsa/leave/templates/accept.html
@@ -1,11 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/accept/accept.css" />
+    <link rel="stylesheet" href="{% static 'styles/normalize.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/accept/accept.css' %}" />
 
     <title>ok man</title>
     <style>
@@ -19,7 +20,7 @@
   <body>
     <div class="bg-img-wrapper">
       <img
-        src="./assets/image/—Pngtree—vibrant 3d taxi icon with_3928555.jpg"
+        src="{% static 'assets/image/—Pngtree—vibrant 3d taxi icon with_3928555.jpg' %}"
         alt="background image"
       />
     </div>
